just before submission
