# src/models/User.ts
@@ -34,6 +34,22 @@ export class User extends Model<
 
   @Attribute(DataTypes.DATE)
   declare joinedOn: CreationOptional<Date>;
+
+  @Attribute(DataTypes.STRING)
+  @NotNull
+  declare password?: string;
+
+  // Default scope to exclude the password field
+  static defaultScope = {
+    attributes: { exclude: ["password"] },
+  };
+
+  // Static scope to include password when needed
+  static scopes = {
+    includePassword: {
+      attributes: { include: ["password"] },
+    },
+  };
 }
 
 export default User;
